--- a/templates/index.html
+++ b/templates/index.html
@@ -57,11 +57,11 @@
                                         <div name="{{ plant.stock | safe }}">Stock: {{ plant.stock | safe }}</div>
                                         {% if plants.offer != 0 and plant.reduced == "Yes"%}
                                             <div class="IndexInfo1Price">
-                                                <div name="{{ plant.price | safe }}" class="IndexInfo1Strike1">Price: {{ plant.price | safe }},00€</div>
-                                                <div name="{{ plant.offer | safe }}" class="IndexInfo1Strike2">  {{ plant.offer | safe }},00€</div>
+                                                <div name="{{ plant.price | safe }}" class="IndexInfo1Strike1">Price: {{ '%0.2f'|format(plant.price) }}€</div>
+                                                <div name="{{ plant.offer | safe }}" class="IndexInfo1Strike2">  {{ '%0.2f'|format(plant.offer) }}€</div>
                                             </div>
                                         {% else %}
-                                            <div name="{{ plant.price | safe }}">Price: {{ plant.price | safe }},00€</div>
+                                            <div name="{{ plant.price | safe }}">Price: {{ '%0.2f'|format(plant.price) }}€</div>
                                         {% endif %}
                                     </div>
                                     <div class="IndexInfo2">
@@ -99,11 +99,11 @@
                                         <div name="{{ plant.stock | safe  }}">Stock: {{ plant.stock | safe }}</div>
                                         {% if plants.offer != 0 and plant.reduced == "Yes"%}
                                             <div class="IndexInfo1Price">
-                                                <div name="{{ plant.price | safe }}" class="IndexInfo1Strike1">Price: {{ plant.price | safe }},00€</div>
-                                                <div name="{{ plant.offer | safe }}" class="IndexInfo1Strike2">  {{ plant.offer | safe }},00€</div>
+                                                <div name="{{ plant.price | safe }}" class="IndexInfo1Strike1">Price: {{ '%0.2f'|format(plant.price) }}€</div>
+                                                <div name="{{ plant.offer | safe }}" class="IndexInfo1Strike2">  {{ '%0.2f'|format(plant.offer) }}€</div>
                                             </div>
                                         {% else %}
-                                            <div name="{{ plant.price | safe }}">Price: {{ plant.price | safe }},00€</div>
+                                            <div name="{{ plant.price | safe }}">Price: {{ '%0.2f'|format(plant.price) }}€</div>
                                         {% endif %}
                                     </div>
                                     <div class="IndexInfo2">
