--- a/templates/addBox.html
+++ b/templates/addBox.html
@@ -49,6 +49,10 @@
             </div>
             <br>
             <div>
+                <input id="weight" autocomplete="off" autofocus class="form-control" name="weight" placeholder="Weight" type="number" min="0">
+            </div>
+            <br>
+            <div>
                 <input id="price_de" autocomplete="off" autofocus class="form-control" name="price_de" placeholder=" Price DE" type="number" min="0" step="0.01">
             </div>
             <br>
