--- a/templates/editBox.html
+++ b/templates/editBox.html
@@ -52,15 +52,19 @@
         </div>
         <br>
         <div>
-            <input id="price_de" autocomplete="off" autofocus class="form-control" name="price_de" placeholder=" Price DE" type="number" min="0" value="{{ boxes[5] | safe }}" step="0.01">
+            <input id="weight" autocomplete="off" autofocus class="form-control" name="weight" placeholder="Weight" type="number" min="0" value="{{ boxes[5] | safe }}">
         </div>
         <br>
         <div>
-            <input id="price_eu" autocomplete="off" autofocus class="form-control" name="price_eu" placeholder=" Price EU" type="number" min="0" value="{{ boxes[6] | safe }}" step="0.01">
+            <input id="price_de" autocomplete="off" autofocus class="form-control" name="price_de" placeholder=" Price DE" type="number" min="0" value="{{ boxes[6] | safe }}" step="0.01">
         </div>
         <br>
         <div>
-            <input id="price_ex" autocomplete="off" autofocus class="form-control" name="price_ex" placeholder=" Express" type="number" min="0" value="{{ boxes[7] | safe }}" step="0.01">
+            <input id="price_eu" autocomplete="off" autofocus class="form-control" name="price_eu" placeholder=" Price EU" type="number" min="0" value="{{ boxes[7] | safe }}" step="0.01">
+        </div>
+        <br>
+        <div>
+            <input id="price_ex" autocomplete="off" autofocus class="form-control" name="price_ex" placeholder=" Express" type="number" min="0" value="{{ boxes[8] | safe }}" step="0.01">
         </div>
         <br>
         <div>
