--- a/templates/administration.html
+++ b/templates/administration.html
@@ -75,6 +75,7 @@
                         <th scope="col">Length</th>
                         <th scope="col">Width</th>
                         <th scope="col">Height</th>
+                        <th scope="col">Weight</th>
                         <th scope="col">Price DE</th>
                         <th scope="col">Price EU</th>
                         <th scope="col">Express</th>
@@ -88,6 +89,7 @@
                             <td>{{ box.length | safe }}</td>
                             <td>{{ box.width | safe }}</td>
                             <td>{{ box.height | safe }}</td>
+                            <td>{{ box.weight | safe }}</td>
                             <td>{{ '%0.2f'|format(box.price_de) }}€</td>
                             <td>{{ '%0.2f'|format(box.price_eu) }}€</td>
                             <td>{{ '%0.2f'|format(box.price_ex) }}€</td>
