--- a/templates/addBox.html
+++ b/templates/addBox.html
@@ -33,23 +33,27 @@
     <form action="/addBox" method="post" enctype="multipart/form-data">
         <div class="AddBoxMain">
             <div>
-                <input id="name" autocomplete="off" autofocus class="form-control" name="name" placeholder="Name" type="text">
+                <input id="name" autocomplete="off" autofocus class="form-control" name="name" placeholder=" Name" type="text">
             </div>
             <br>
             <div>
-                <input id="length" autocomplete="off" autofocus class="form-control" name="length" placeholder="Length" type="number" min="0">
+                <input id="length" autocomplete="off" autofocus class="form-control" name="length" placeholder=" Length" type="number" min="0">
             </div>
             <br>
             <div>
-                <input id="width" autocomplete="off" autofocus class="form-control" name="width" placeholder="Width" type="number" min="0">
+                <input id="width" autocomplete="off" autofocus class="form-control" name="width" placeholder=" Width" type="number" min="0">
             </div>
             <br>
             <div>
-                <input id="height" autocomplete="off" autofocus class="form-control" name="height" placeholder="Height" type="number" min="0">
+                <input id="height" autocomplete="off" autofocus class="form-control" name="height" placeholder=" Height" type="number" min="0">
             </div>
             <br>
             <div>
-                <input id="weight" autocomplete="off" autofocus class="form-control" name="weight" placeholder="Weight" type="number" min="0">
+                <input id="weight_ne" autocomplete="off" autofocus class="form-control" name="weight_ne" placeholder=" Weight non-express" type="number" min="0">
+            </div>
+            <br>
+            <div>
+                <input id="weight_ex" autocomplete="off" autofocus class="form-control" name="weight_ex" placeholder=" Weight express only" type="number" min="0">
             </div>
             <br>
             <div>
