--- a/templates/addPlant.html
+++ b/templates/addPlant.html
@@ -84,6 +84,10 @@
             </div>
             <br>
             <div>
+                <input type="checkbox" id="express" name="express" value="express">
+                <label for="express"> Express only?</label>
+            </div>
+            <div>
                 <input type="checkbox" id="reduced" name="reduced" value="reduced">
                 <label for="reduced"> Show reduced price?</label>
             </div>
