--- a/templates/addBox.html
+++ b/templates/addBox.html
@@ -53,7 +53,7 @@
             </div>
             <br>
             <div>
-                <input id="weight_ex" autocomplete="off" autofocus class="form-control" name="weight_ex" placeholder=" Weight express only" type="number" min="0">
+                <input id="weight_ex" autocomplete="off" autofocus class="form-control" name="weight_ex" placeholder=" Weight express" type="number" min="0">
             </div>
             <br>
             <div>
