--- a/templates/editBox.html
+++ b/templates/editBox.html
@@ -56,7 +56,7 @@
         </div>
         <br>
         <div>
-            <input id="weight_ex" autocomplete="off" autofocus class="form-control" name="weight_ex" placeholder=" Weight express only" type="number" min="0" value="{{ boxes[6] | safe }}">
+            <input id="weight_ex" autocomplete="off" autofocus class="form-control" name="weight_ex" placeholder=" Weight express" type="number" min="0" value="{{ boxes[6] | safe }}">
         </div>
         <br>
         <div>
