--- a/templates/editBox.html
+++ b/templates/editBox.html
@@ -68,7 +68,7 @@
         </div>
         <br>
         <div>
-            <input id="price_ex" autocomplete="off" autofocus class="form-control" name="price_ex" placeholder=" Express" type="number" min="0" value="{{ boxes[9] | safe }}" step="0.01">
+            <input id="price_ex" autocomplete="off" autofocus class="form-control" name="price_ex" placeholder=" Price express" type="number" min="0" value="{{ boxes[9] | safe }}" step="0.01">
         </div>
         <br>
         <div>
