--- a/templates/addBox.html
+++ b/templates/addBox.html
@@ -65,7 +65,7 @@
             </div>
             <br>
             <div>
-                <input id="price_ex" autocomplete="off" autofocus class="form-control" name="price_ex" placeholder=" Express" type="number" min="0" step="0.01">
+                <input id="price_ex" autocomplete="off" autofocus class="form-control" name="price_ex" placeholder=" Price express" type="number" min="0" step="0.01">
             </div>
             <br>
             <div>
