--- a/static/styles.css
+++ b/static/styles.css
@@ -688,3 +688,12 @@ button {
 	width: 750px;
 }
 
+.PaySecond {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+	align-items: center;
+	align-content: center;
+}
+
