--- a/templates/pay.html
+++ b/templates/pay.html
@@ -74,9 +74,9 @@
     <script>
         document.querySelector("#express").disabled = true;
 
-        document.getElementById("cookies").onclick = function() {
+        document.getElementById("country").onclick = function() {
 
-            let selection = document.querySelector("#express").value;
+            let selection = document.getElementById("country").value;
             console.log(selection);
         }
     </script>
