--- a/templates/pay.html
+++ b/templates/pay.html
@@ -79,6 +79,9 @@
             if (selection === "Germany") {
                 document.querySelector("#express").disabled = false;
             }
+            else {
+                document.querySelector("#express").disabled = true;
+            }
         }
     </script>
 {% endblock %}
