--- a/templates/editBox.html
+++ b/templates/editBox.html
@@ -78,6 +78,6 @@
 </form>
     <br>
     <div>
-        <a href="/"><img src="/static/back.svg" alt="back" height="50"></a>
+        <a href="/administration"><img src="/static/back.svg" alt="back" height="50"></a>
     </div>
 {% endblock %}
