--- a/templates/addBox.html
+++ b/templates/addBox.html
@@ -75,6 +75,6 @@
     </form>
     <br>
     <div>
-        <a href="/"><img src="/static/back.svg" alt="back" height="50"></a>
+        <a href="/administration"><img src="/static/back.svg" alt="back" height="50"></a>
     </div>
 {% endblock %}
