--- a/templates/history.html
+++ b/templates/history.html
@@ -44,7 +44,7 @@
                     {% for order in orders %}
                         <tr>
                             <td>{{ order.date | safe }}</td>
-                            <td>{% for plant in order.plants %} {% for item in plant %} {{ item[1] }} {% endfor %} {% endfor %}</td>
+                            <td>{% for plant in order.plants %} {% for item in plant %} {{ item }} {% endfor %} {% endfor %}</td>
                         </tr>
                     {% endfor %}
                 </tbody>
