--- a/templates/history.html
+++ b/templates/history.html
@@ -41,13 +41,11 @@
                 </thead>
 
                 <tbody>
-                    {% for order in orders %}
-                        {% for plant in plants %}
+                    {% for order, plant in orders, plants %}
                         <tr>
                             <td>{{ order.date | safe }}</td>
                             <td>{{ plant[1] | safe }}</td>
                         </tr>
-                        {% endfor %}
                     {% endfor %}
                 </tbody>
             </table>
