--- a/templates/history.html
+++ b/templates/history.html
@@ -44,7 +44,7 @@
                     {% for order, plant in zip %}
                         <tr>
                             <td>{{ order.date | safe }}</td>
-                            <td>{{ plant[1] | length }}</td>
+                            <td>{% for item in plant %} {{ item[1] | safe }} {% endfor %}</td>
                         </tr>
                     {% endfor %}
                 </tbody>
