--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -34,8 +34,11 @@
         <input type="checkbox" id="pay" name="pay" value="pay">
         <label for="pay"> Pay?</label>
     </div>
+    <div>
+        <button id="submit" type="submit" name="submit" value="submit"><img src="/static/pay.svg" alt="pay" height="50"></button>
+    </div>
     <br>
     <div>
-        <a href="/"><img src="/static/back.svg" alt="back" height="50"></a>
+        <a href="/pay"><img src="/static/back.svg" alt="back" height="50"></a>
     </div>
 {% endblock %}
