--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -32,8 +32,10 @@
 {% block main %}
     <form action="/confirmation" method="post" enctype="multipart/form-data">
         <div>
-            Shipping cost: {{ shipping }}
+            Shipping cost: {{ '%0.2f'|format(shipping) }}€
+            Total price: {{ '%0.2f'|format(total) }}€
         </div>
+        <br>
         <div>
             <input type="checkbox" id="pay" name="pay" value="pay">
             <label for="pay"> Pay?</label>
