--- a/templates/history.html
+++ b/templates/history.html
@@ -37,6 +37,8 @@
                     <tr>
                         <th scope="col">Date</th>
                         <th scope="col">Plants</th>
+                        <th scope="col">Total</th>
+                        <th scope="col">Status</th>
                     </tr>
                 </thead>
 
@@ -45,6 +47,8 @@
                         <tr>
                             <td>{{ order.date | safe }}</td>
                             <td>{% for item in plant %} {{ item[1] | safe }} {% endfor %}</td>
+                            <td>{{ order.total | safe }}</td>
+                            <td>{{ order.stage | safe }}</td>
                         </tr>
                     {% endfor %}
                 </tbody>
