--- a/templates/history.html
+++ b/templates/history.html
@@ -47,7 +47,7 @@
                         <tr>
                             <td>{{ order.date | safe }}</td>
                             <td>{% for item in plant %} {{ item[1] | safe }} {% endfor %}</td>
-                            <td>{{ order.total | safe }}</td>
+                            <td>{{ '%0.2f'|format(subtotal + shipping) }}€</td>
                             <td>{{ order.stage | safe }}</td>
                         </tr>
                     {% endfor %}
