--- a/templates/basket.html
+++ b/templates/basket.html
@@ -65,7 +65,7 @@
                 </tbody>
             </table>
             <div>
-                <a href="/pay"><img src="/static/pay.svg" alt="pay" height="50"></a>
+                <button name="pay" value="pay" type="submit"><img src="/static/pay.svg" alt="pay" height="50"></button>
             </div>
         </form>
     </div>
