--- a/templates/order.html
+++ b/templates/order.html
@@ -2,18 +2,21 @@ Hello {{ name }},
 
 Thank you for your Crazy-Plant-Crew order! We will let you know as soon as your item(s) have been dispatched.
 
+
 Address:
-{% for address in addresses %}
-{{ address }}
-{% endfor %}
+{% for address in addresses %}{{ address }}{% endfor %}
+
 
 Order:
 {% for plant in plants %}
--{{ plant[1], plant[2] }}x
+- {{ plant[1] | safe }}, ordered {{ plant[2] | safe }} time(s)
 {% endfor %}
+
 
 Total:
 {{ '%0.2f'|format(total) }}€
+
+
 
 We kindly ask you to verify these information. Should there be any problem, please contact us at crazyplantcrew@gmail.com. 
 
