--- a/templates/order.html
+++ b/templates/order.html
@@ -5,9 +5,11 @@ Here is the summary of your order today ({{ date }}):
 
 
 Address:
-{% for address in addresses %}
-- {{ address }}
-{% endfor %}
+Street name: {{ address[0] }}
+House number: {{ address[1] }}
+Zipcode: {{ address[2] }}
+Country: {{ address[3] }}
+Additional information: {{ address[4] }}
 
 
 Order:
