--- a/templates/order.html
+++ b/templates/order.html
@@ -5,11 +5,11 @@ Here is the summary of your order today ({{ date }}):
 
 
 Address:
-Street name: {{ address[0] }}
-House number: {{ address[1] }}
-Zipcode: {{ address[2] }}
-Country: {{ address[3] }}
-Additional information: {{ address[4] }}
+Street name: {{ addresses[0] }}
+House number: {{ addresses[1] }}
+Zipcode: {{ addresses[2] }}
+Country: {{ addresses[3] }}
+Additional information: {{ addresses[4] }}
 
 
 Order:
