--- a/templates/pay.html
+++ b/templates/pay.html
@@ -33,6 +33,18 @@
     <form action="/pay" method="post" enctype="multipart/form-data">
         <div class="PayMain">
             <div>
+                <input id="first" autocomplete="off" autofocus class="form-control" name="first" placeholder=" First name" type="text">
+            </div>
+            <br>
+            <div>
+                <input id="last" autocomplete="off" autofocus class="form-control" name="last" placeholder=" Last name" type="text">
+            </div>
+            <br>
+            <div>
+                <input id="caresof" autocomplete="off" autofocus class="form-control" name="caresof" placeholder=" Cares of C/O" type="text">
+            </div>
+            <br>
+            <div>
                 <input id="street" autocomplete="off" autofocus class="form-control" name="street" placeholder=" Street name" type="text">
             </div>
             <br>
@@ -42,6 +54,10 @@
             <br>
             <div>
                 <input id="zipcode" autocomplete="off" autofocus class="form-control" name="zipcode" placeholder=" Zip code" type="text">
+            </div>
+            <br>
+            <div>
+                <input id="city" autocomplete="off" autofocus class="form-control" name="city" placeholder=" City" type="text">
             </div>
             <br>
             <div class="PaySecond">
