--- a/templates/order.html
+++ b/templates/order.html
@@ -4,12 +4,15 @@ Thank you for your Crazy-Plant-Crew order! We will let you know as soon as your 
 Here is the summary of your order today ({{ date }}):
 
 
-Address:
-Street name: {{ addresses[0] }}
-House number: {{ addresses[1] }}
-Zipcode: {{ addresses[2] }}
-Country: {{ addresses[3] }}
-Additional information: {{ addresses[4] }}
+Address: 
+{{ addresses[0] }} {{ addresses[1] }} 
+{{ addresses[2] }} 
+{{ addresses[3] }} {{ addresses[4] }}
+{{ addresses[5] }} {{ addresses[6] }}
+{{ addresses[7] }}
+
+Additional information(s):
+{{ addresses[7] }}
 
 
 Order:
