--- a/templates/order.html
+++ b/templates/order.html
@@ -6,9 +6,7 @@ Here is the summary of your order today ({{ date }}):
 
 Address: 
 {{ addresses[0] }} {{ addresses[1] }}
-{% if addresses[2] != "None" %}   
-    {{ addresses[2] }}
-{% endif %}
+{% if addresses[2] != "None" %}{{ addresses[2] }}{% endif %}
 {{ addresses[3] }} {{ addresses[4] }}
 {{ addresses[5] }} {{ addresses[6] }}
 {{ addresses[7] }}
