--- a/templates/history.html
+++ b/templates/history.html
@@ -39,6 +39,7 @@
                         <th scope="col">Plants</th>
                         <th scope="col">Total</th>
                         <th scope="col">Status</th>
+                        <th scope="col">Pay</th>
                     </tr>
                 </thead>
 
@@ -49,6 +50,7 @@
                             <td>{% for item in plant %} {{ item[1] | safe }} {% endfor %}</td>
                             <td>{{ '%0.2f'|format(order.total) }}€</td>
                             <td>{{ order.stage | safe }}</td>
+                            <td>{{ order.pay | safe }}</td>
                         </tr>
                     {% endfor %}
                 </tbody>
